--- a/index.html
+++ b/index.html
@@ -3,36 +3,36 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Nyomtatás</title>
+  <title>trója</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="nyomtatas.css">
+  <link rel="stylesheet" href="trojai haboru.css">
 </head>
 
 <body>
 
   <div class="jumbotron bg-fej text-center">
-    <h1>Véget ért a Trójai Háború</h1>
+    <h1>Véget ért a háború</h1>
   </div>
 
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h3>összefoglaló</h3>
-        <p>A trójai háború az ókorban az akhájok és a Trója között zajlott. A háború azután tört ki, miután <a href="https://hu.wikipedia.org/wiki/Parisz" target="_blank">Parisz</a>,<a href="https://hu.wikipedia.org/wiki/Helen%C3%A9" target="_blank">Helenét</a>, <a href="https://hu.wikipedia.org/wiki/Menelaosz_sp%C3%A1rtai_kir%C3%A1ly" target="_blank">Menelaosz</a> spártai király feleségét. melynek célja Trója városának (görelfoglalása volt a görög csapatok által. Az ostrom 10 évig tartott.</p>
+        <h3>előzmény:</h3>
+        <p>A háború az akhájok és a Trója között zajlott. A háború azután tört ki, miután <a href="https://hu.wikipedia.org/wiki/Parisz" target="_blank">Parisz</a>, <a href="https://hu.wikipedia.org/wiki/Helen%C3%A9" target="_blank">Helenét</a>, <a href="https://hu.wikipedia.org/wiki/Menelaosz_sp%C3%A1rtai_kir%C3%A1ly" target="_blank">Menelaosz</a> spártai király feleségét. melynek célja Trója városának (görelfoglalása volt a görög csapatok által. Az ostrom 10 évig tartott.</p>
       </div>
 
+      <div class="row">
+        <div class="col-md- bg-torzs">
+          <h3>az ostrom:</h3>
+          <p></p>
+       </div>
 
   <div class="row">
     <div class="col-md- bg-torzs">
-      <h3>Magasnyomtatás</h3>
-      <p>A nyomtatás Kínában már a 8. században feltehetőleg ismert volt. A ma ismert legrégebbi bizonyíték egy
-        868-ban készült Gyémánt szútra, de a források alapján már 812-től papírpénzt is előállítottak, amelyhez
-        nélkülözhetetlen a nyomtatás. A magasnyomtatás kezdetleges formáját, a fadúcos nyomtatást alkalmazták, amely
-        abból állt, hogy egy kézzel vésett falapot befestékeztek, majd egy papírlapot ráterítettek, és száraz kefével
-        a hátoldalát dörzsölve hozzásimították. Ugyanekkor már megpróbálkoztak fából faragott, szedhető írásjegyekkel
-        is, jó néhány nyomtatott könyvet készítettek, de az eljárás nem terjedt el széles körben.</p>
-        <p><img src="kezi_szedes.jpg" alt="Kézi szedés" title="Kézi szedés" class="img-thumbnail"></p>
+      <h3>Interjú Ákhilleusszal:</h3>
+      <p></p>
+        <p><img src="a68398e15b54ac29ce6d09670385be07.jpg" alt="Ákhilleusz" title="Ákhilleusz" class="img"></p>
     </div>
 
   <script src="js/bootstrap.min.js"></script>
