--- a/index.html
+++ b/index.html
@@ -19,19 +19,33 @@
     <div class="row">
       <div class="col-md-12">
         <h3>előzmény:</h3>
-        <p>A háború az akhájok és a Trója között zajlott. A háború azután tört ki, miután <a href="https://hu.wikipedia.org/wiki/Parisz" target="_blank">Parisz</a>, <a href="https://hu.wikipedia.org/wiki/Helen%C3%A9" target="_blank">Helenét</a>, <a href="https://hu.wikipedia.org/wiki/Menelaosz_sp%C3%A1rtai_kir%C3%A1ly" target="_blank">Menelaosz</a> spártai király feleségét. melynek célja Trója városának (görelfoglalása volt a görög csapatok által. Az ostrom 10 évig tartott.</p>
+        <p>A háború az akhájok és a Trója között zajlott. A háború azután tört ki, miután <a href="https://hu.wikipedia.org/wiki/Parisz" target="_blank">Parisz</a>, <a href="https://hu.wikipedia.org/wiki/Helen%C3%A9" target="_blank">Helenét</a>, <a href="https://hu.wikipedia.org/wiki/Menelaosz_sp%C3%A1rtai_kir%C3%A1ly" target="_blank">Menelaosz</a> spártai király feleségét. melynek célja Trója városának elfoglalása volt a görög csapatok által. Az ostrom 10 évig tartott.</p>
       </div>
 
       <div class="row">
         <div class="col-md- bg-torzs">
           <h3>az ostrom:</h3>
-          <p></p>
+          <p>Az ostrom során a görög csapatok számos taktikát és stratégiát alkalmaztak, hogy megpróbálják bevenni Trója városát. A város erős falai és védelme miatt a harcok hosszú hónapokig elhúzódtak. A görögök többször megpróbálták megrohamozni a falakat, de a trójaiak bátor ellenállása megakadályozta őket abban, hogy sikerrel járjanak.
+
+            A háború során számos hősies küzdelem zajlott, és a két oldal között sok híres harcos lépett színre, mint például Akhilleusz, Hektor és Odüsszeusz. Akhilleusz, aki a görögök legjobb harcosa volt, sok csatát megnyert, de végül a saját sorsa is elérte, amikor Hektor megölte Párizst.
+            
+            A háború során a görögök egy különleges stratégiát is alkalmaztak: a híres Trójai falovat. Ez a hatalmas, üreges fa szerkezet lehetővé tette a görög harcosok számára, hogy bejussanak Trója falai mögé. A trójaiak, akik azt hitték, hogy a görögök feladták a harcot, a falovot a városba hozták, és éjjeli órákban a görög harcosok előugrottak belőle, és megnyitották a város kapuit a többi görög katona előtt.
+            
+            A város végül elesett, és a görög csapatok betörtek Trójába. A háború véget ért, de a következmények és a történetek, amelyek a háború során születtek, örökre megmaradnak a történelem lapjain. A trójai háború nemcsak a harcokról szólt, hanem a hűségről, a szerelemről és a sorsról is, amely örök tanulságként szolgál az emberiség számára.</p>
+            <p><img src="zbmc556vhi251.png" alt="Trójai Háború" title="Trójai Háború" class="img"></p>
        </div>
 
   <div class="row">
     <div class="col-md- bg-torzs">
       <h3>Interjú Ákhilleusszal:</h3>
-      <p></p>
+      <p>Kérdés: Mi a legnagyobb félelmed a harcban?</p>
+      <p>Álhilleusz válasza: A legnagyobb félelmem, hogy a nevem elfeledik, és a hősi cselekedeteim hiábavalóvá válnak. Az emberek az emlékekért harcolnak, és én a dicsőségre vágyom.</p>
+      <p>Kérdés: Hogyan érezted magad Patroklosz halála után?</p>
+      <p>Álhilleusz válasza: Patroklosz halála mélyen megrázott. Ő volt a legjobb barátom, és az ő elvesztése égető fájdalmat okozott. Ezért döntöttem úgy, hogy visszatérek a harcba, hogy megbosszuljam a halálát.</p>
+      <p>Kérdés: Mit gondolsz a halálról?</p>
+      <p>Álhilleusz válasza: A halál elkerülhetetlen, de a hírnév és a dicsőség örökké élhet. Tudom, hogy a halálom jön, de inkább így élek, mintsem hogy egy unalmas életet éljek, és feledésbe merüljek.
+
+      </p>
         <p><img src="a68398e15b54ac29ce6d09670385be07.jpg" alt="Ákhilleusz" title="Ákhilleusz" class="img"></p>
     </div>
 
