--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p>Álhilleusz válasza: A halál elkerülhetetlen, de a hírnév és a dicsőség örökké élhet. Tudom, hogy a halálom jön, de inkább így élek, mintsem hogy egy unalmas életet éljek, és feledésbe merüljek.
 
       </p>
-        <p><img src="a68398e15b54ac29ce6d09670385be07.jpg" alt="Ákhilleusz" title="Ákhilleusz" class="img"></p>
+        <p><img src="DALL·E 2025-01-30 12.37.21 - Achilles, the mighty Greek warrior, standing triumphantly on a battlefield. He wears golden armor with intricate engravings, a red flowing cape, and a.webp" alt="Ákhilleusz" title="Ákhilleusz" class="img"></p>
     </div>
 
   <script src="js/bootstrap.min.js"></script>
