--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             A háború során a görögök egy különleges stratégiát is alkalmaztak: a híres Trójai falovat. Ez a hatalmas, üreges fa szerkezet lehetővé tette a görög harcosok számára, hogy bejussanak Trója falai mögé. A trójaiak, akik azt hitték, hogy a görögök feladták a harcot, a falovot a városba hozták, és éjjeli órákban a görög harcosok előugrottak belőle, és megnyitották a város kapuit a többi görög katona előtt.
             
             A város végül elesett, és a görög csapatok betörtek Trójába. A háború véget ért, de a következmények és a történetek, amelyek a háború során születtek, örökre megmaradnak a történelem lapjain. A trójai háború nemcsak a harcokról szólt, hanem a hűségről, a szerelemről és a sorsról is, amely örök tanulságként szolgál az emberiség számára.</p>
-            <p><img src="zbmc556vhi251.png" alt="Trójai Háború" title="Trójai Háború" class="img"></p>
+            <p><img src="DALL·E 2025-01-30 12.44.00 - A dramatic digital painting of ancient Troy during the Trojan War. The city is engulfed in chaos, with its massive stone walls under siege. Greek sold.webp" alt="Trójai Háború" title="Trójai Háború" class="img"></p>
        </div>
 
   <div class="row">
